--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <!-- Base Href -->
-  <base href="$FLUTTER_BASE_HREF">
+ <base href="/dodweb/">
+
 
   <!-- Charset & Viewport -->
   <meta charset="UTF-8">
